<resources>
    <string name="app_name">ConPay</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="accountTitle">My Account</string>
    <string name="accountName">Account Name</string>
    <string name="accountEmail">Account Email</string>
    <string name="accountEventNumber">Number of Events</string>
    <string name="accountRating">Rating</string>
    <string name="accountCreationDate">Account Creation Date</string>
</resources>
