<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyAccountActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/accountTextView"
            android:text="@string/accountTitle"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="31dp" />

        <TextView
            android:id="@+id/accountNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="12dp"
            android:text="@string/accountName"
            app:layout_constraintStart_toStartOf="@id/accountTextView"
            app:layout_constraintTop_toBottomOf="@id/accountTextView" />

        <TextView
            android:id="@+id/accountEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="12dp"
            android:text="@string/accountEmail"
            app:layout_constraintStart_toStartOf="@id/accountNameTextView"
            app:layout_constraintTop_toBottomOf="@id/accountNameTextView" />

        <TextView
            android:id="@+id/accountEventNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="12dp"
            android:text="@string/accountEventNumber"
            app:layout_constraintStart_toStartOf="@id/accountEmailTextView"
            app:layout_constraintTop_toBottomOf="@id/accountEmailTextView" />

        <TextView
            android:id="@+id/accountRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="12dp"
            android:text="@string/accountRating"
            app:layout_constraintStart_toStartOf="@id/accountEventNumberTextView"
            app:layout_constraintTop_toBottomOf="@id/accountEventNumberTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>